2006-03-23  Atsushi Enomoto <atsushi@ximian.com>

	* DTDValidatingReader.cs : avoid NullReferenceException. Input
	  XmlReader might not be IHasXmlParserContext.

2006-03-08  Atsushi Enomoto <atsushi@ximian.com>

	* XmlReader.cs: ReadContentAsXXX() just stops at start element,
	  without rejecting it as an error.
	  ReadElementContentAsXXX() rejects child element nodes.

2006-02-28  Atsushi Enomoto <atsushi@ximian.com>

	* XmlElement.cs : (WriteTo) use IsEmpty to determine which to use:
	  WriteEndElement() and WriteFullEndElement(). Fixed sys.security
	  regression.

2006-02-24  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextWriter2.cs :
	  WriteRaw() has stupid second arg. Fixed bug #77623.
	  WriteString() should raise an error when it is called immediately
	  after WriteStartDocument().

2006-02-22  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextWriter2.cs : WriteChars() should allow Attribute state.

2006-02-22  Atsushi Enomoto <atsushi@ximian.com>

	* XmlChar.cs : (IndexOfInvalidChar) fixed surrogate pairs handling.
	  They were always regarded as invalid.
	* XmlTextWriter2.cs : seems like MS XmlTextWriter outputs invalid
	  characters as character references. It totally does not make sense
	  but corcompare depended on that behavior.

	  This "compatibility" fix causes 10% or more performance loss!!!

2006-02-21  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextWriter2.cs : (WriteStartAtribute) more == removal.
	* XmlNode.cs : (get_InnerText) reduce extra StringBuilder creation.

2006-02-21  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextWriter2.cs : (WriteStartAttribute) reduced string == string.

2006-02-21  Atsushi Enomoto <atsushi@ximian.com>

	* XmlDocument.cs : (ReadNodeCore) not public.

2006-02-21  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextWriter2.cs : (CloseStartElement)
	  Avoid ArrayList.Clear() and culture-sensitive Contains().

2006-02-21  Atsushi Enomoto <atsushi@ximian.com>
