@@ -1,5 +1,11 @@
 2006-03-23  Atsushi Enomoto <atsushi@ximian.com>
 
+	* XmlReader.cs : in XmlReader.Create() ValidationType Auto and XDR
+	  are simply ignored (it was found on running NvdlValidatingReader
+	  under MS.NET 2.0).
+
+2006-03-23  Atsushi Enomoto <atsushi@ximian.com>
+
 	* DTDValidatingReader.cs : avoid NullReferenceException. Input
 	  XmlReader might not be IHasXmlParserContext.
 
